menu hecho, despues de terminar todo pasar a comando, faltan 5 y 6

--- a/ProyectoProg3/CMakeLists.txt
+++ b/ProyectoProg3/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(segundoparcial)
+project(proyecto)
 
-add_executable(U00-E06  main.cpp)
+add_executable(U00-E06  main.cpp Arbol/ArbolBinarioAVL.h)
 set(CMAKE_BUILD_TYPE Release)
